# soil

./: LICENSE  README.md  soil.cabal
app/: Main.hs  Plugins.hs
src/Network/: Soil.hs
src/Network/Soil/: Config.hs  Curl.hs  Options.hs  Request.hs  Utils.hs
